# Advent-Of-Code-2021

./: .gitignore  CMakeLists.txt  README.md
solutions/common/: SolutionBuilder.cmake  Utils.h
solutions/day01/: CMakeLists.txt  day01.cpp
solutions/day02/: CMakeLists.txt  SubmarineSystems.h  day02.cpp
solutions/day03/: CMakeLists.txt  day03.cpp
solutions/day04/: BingoBoard.h  BingoGame.h  CMakeLists.txt  PuzzleInput.h  PuzzleInputReader.h  day04.cpp
solutions/day05/: CMakeLists.txt  Geometry.h  Map.h  day05.cpp
solutions/day06/: CMakeLists.txt  day06.cpp
solutions/day07/: CMakeLists.txt  day07.cpp
solutions/day08/: CMakeLists.txt  day08.cpp
solutions/day09/: CMakeLists.txt  day09.cpp
solutions/day10/: CMakeLists.txt  day10.cpp
solutions/day11/: CMakeLists.txt  day11.cpp
solutions/day12/: CMakeLists.txt  day12.cpp
solutions/day13/: CMakeLists.txt  day13.cpp
solutions/day14/: CMakeLists.txt  day14.cpp
solutions/day15/: CMakeLists.txt  day15.cpp
solutions/day16/: CMakeLists.txt  Converters.h  Packets.h  PacketsParser.h  day16.cpp
solutions/day17/: CMakeLists.txt  day17.cpp
solutions/day18/: CMakeLists.txt  day18.cpp
solutions/day19/: BeaconsMap.h  CMakeLists.txt  InputParser.h  ManhattanDistance.h  Rotation.h  Scanner.h  ScannersInnerDistancesCache.h  ScannersMap.h  ScannersRotationCache.h  day19.cpp
solutions/day20/: CMakeLists.txt  day20.cpp  input.txt
solutions/day21/: CMakeLists.txt  day21.cpp
solutions/day22/: CMakeLists.txt  day22.cpp
solutions/day25/: CMakeLists.txt  day25.cpp  input.txt
