cmake_minimum_required(VERSION 3.16)
project(Advent_Of_Code_2021)

add_subdirectory(solutions/day01)
add_subdirectory(solutions/day02)
add_subdirectory(solutions/day03)
add_subdirectory(solutions/day04)
add_subdirectory(solutions/day05)
add_subdirectory(solutions/day06)
add_subdirectory(solutions/day07)
add_subdirectory(solutions/day08)
add_subdirectory(solutions/day09)
add_subdirectory(solutions/day10)
add_subdirectory(solutions/day11)
add_subdirectory(solutions/day12)
add_subdirectory(solutions/day13)
add_subdirectory(solutions/day14)